# home

./: .editorconfig  .env.example  .gitignore  README.md  apollo.config.js  bootstrap-workspace.sh  docker-compose.yml  home.code-workspace  setup.sh
.github/workflows/: api.yaml  migrator.yaml  web.yaml
api/: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  build.rs
api/ent/: Cargo.toml
api/ent/macros/: Cargo.toml
api/ent/macros/src/: object.rs
api/ent/src/: comparison.rs  conditions.rs  context.rs  entity.rs  id.rs  lib.rs  meta.rs  object.rs  record.rs  services.rs  sorting.rs  transaction.rs  utils.rs
api/macros/: Cargo.toml
api/macros/src/: into_bson.rs  lib.rs  object_type.rs  object_type_helpers.rs  object_type_serde.rs
api/src/: auth.rs  config.rs  entities.rs  env.rs  graph.rs  handlers.rs  lib.rs  lyricly.rs  main.rs  obsidian.rs  prelude.rs  services.rs  spotify.rs  util.rs
api/src/entities/: build.rs  cmp.rs  comparison.rs  context.rs  database.rs  date.rs  email.rs  entity.rs  form.rs  form_response.rs  handle.rs  heart.rs  heart_rate.rs  helpers.rs  id.rs  knowledge_entry.rs  object.rs  phone.rs  prelude.rs  record.rs  services.rs  settings.rs  sorting.rs  transaction.rs
api/src/graph/: build.rs  date.rs  date_time.rs  form.rs  form_response.rs  heart.rs  heart_rate.rs  helpers.rs  id.rs  knowledge.rs  knowledge_entry.rs  knowledge_entry_links.rs  lyric_line.rs  lyrics.rs  music.rs  music_album.rs  music_artist.rs  music_info.rs  music_track.rs  mutation.rs  prelude.rs  query.rs  subscription.rs  test.rs  user.rs
api/src/handlers/: graphql.rs  graphql_playground.rs  health_webhook.rs
api/src/services/: auth0.rs  heap.rs  lyricly.rs  obsidian.rs  segment.rs  spotify.rs
api/src/services/obsidian/: client.rs  reader.rs
migrator/: .env  .gitignore  Dockerfile  migrate-mongo-config.js  package.json
migrator/migrations/: 20210905033246-add_index_to_heart_rates.js  20210906032709-remove_id_from_heart_rates.js  20211012233715-add_meta_prefixes.js  20211112054917-rename_collections.js  20211112055044-camelize_heart_rate.js  20211112055151-add_indexes_to_form.js  20211112070541-update_form_handle_index.js  20211121032459-add_archived_at_to_form.js  20211124143851-rename_archived_at_to_deleted_at_on_form.js  20211124144813-add_deleted_at_index_to_form.js  20211207134952-remove_null_fields_from_form.js  20211210154257-rename_timestamp_on_heart_rate.js  20211210154957-drop_underscores_on_meta_fields.js  20211210155730-add_underscore_to_form_id_on_form_response.js
web/: .dockerignore  .env  .eslintrc  .gitignore  .graphqlrc.yml  .prettierignore  Dockerfile  apollo.config.js  codegen.yml  config.ts  consts.ts  graphql-schema.json  graphql-types.ts  next.config.js  package.json  sentry.client.config.ts  sentry.config.ts  tsconfig.json
web/apollo/: helpers.ts  index.ts  schema.json  schema.ts
web/components/: admin-research-section.tsx  apollo.tsx  assert.tsx  auth0-handler.tsx  auth0.tsx  chakra.tsx  client-only.tsx  confirm-delete-alert.tsx  create-form-dialog.tsx  create-form-modal.tsx  delete-dialog.tsx  disclosure.tsx  external-link.tsx  form-card.tsx  form-fields.tsx  form-response-dialog.tsx  form-response-modal.tsx  handle-field.tsx  heap.tsx  heart-beat.tsx  heart-section.tsx  heart-stat.tsx  heart.tsx  home-heart-section.tsx  home-music-section.tsx  index.tsx  internal-link.tsx  knowledge-graph.tsx  knowledge.tsx  layout.tsx  link.tsx  meta.tsx  modal-trigger.tsx  music-lyrics.tsx  music-section.tsx  music.tsx  no-content.tsx  section.tsx  segment.tsx  skeleton.tsx  (+6 more)
web/pages/: 404.tsx  _app.tsx  _document.tsx  _error.tsx  admin.tsx  index.tsx  knowledge.tsx  test.tsx
web/pages/admin/form/: [formId].tsx
web/pages/api/: health.tsx
web/pages/api/auth/: [auth0].tsx  [handler].tsx  token.tsx
web/pages/research/: [formHandle].tsx  [form].tsx  [handle].tsx
web/pages/research/[formHandle]/: complete.tsx
web/pages/research/[form]/: complete.tsx
web/pages/test/: error.tsx
web/public/: site.webmanifest
web/typings/: heap.d.ts
