[package]
name = "home-api"
version = "0.6.8"
edition = "2021"
rust-version = "1.56.0"


[dependencies]
anyhow = "^1.0.44"
async_trait = { package = "async-trait", version = "^0.1.51" }
bson = { version = "^2.0.0", features = ["chrono-0_4"] }
chrono = { version = "^0.4.19", features = ["serde"] }
delegate = "^0.6.1"
derives = { package = "derive_more", version = "^0.99.16" }
derivative = "^2.2.0"
dotenv = "^0.15.0"
emails = { package = "mailchecker", version = "^4.0.12" }
entrust = { git = "https://github.com/hulloitskai/entrust", tag = "v0.2.6" }
futures = { package = "futures-core", version = "^0.3.17" }
futures_util = { package = "futures-util", version = "^0.3.17" }
graphql_axum = { package = "async-graphql-axum", version = "^2.11.3" }
headers = "^0.3.5"
http = "^0.2.5"
lazy_static = "^1.4.0"
moka = { version = "^0.6.1", features = ["future"] }
mongodb = { version = "^2.0.1", features = ["bson-chrono-0_4"] }
oauth2 = "^4.1.0"
phones = { package = "phonenumber", version = "^0.3.1" }
regex = { version = "^1.5.4" }
sentry_tracing = { package = "sentry-tracing", version = "^0.23.0 "}
serde = { version = "^1.0.130", features = ["derive"] }
serde_json = "^1.0.68"
thiserror = "^1.0.30"
tokio = { version = "^1.12.0", features = ["rt-multi-thread", "macros"] }
tower = "^0.4.10"
tracing = "^0.1.28"
typed_builder = { package = "typed-builder", version = "^0.9.1" }
url = { version = "^2.2.2", features = ["serde"] }
walkdir = "^2.3.2"
yaml = { package = "yaml-rust", version = "^0.4.5" }
yaml_front_matter = { package = "frontmatter", version = "^0.4.0" }

[dependencies.axum]
version = "^0.3.0"
default-features = false
features = ["http2", "ws", "headers", "json"]

[dependencies.graphql]
package = "async-graphql"
version = "^2.11.3"
features = ["chrono", "url", "apollo_persisted_queries"]

[dependencies.request]
package = "reqwest"
version = "^0.11.4"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.sentry]
version = "^0.23.0"
default-features = false
features = [
  "backtrace",
  "contexts",
  "panic",
  "tracing",
  "reqwest",
  "rustls",
  "anyhow",
]

[dependencies.tower_http]
package = "tower-http"
version = "^0.1.2"
features = ["trace", "cors"]

[dependencies.tracing_subscriber]
package = "tracing-subscriber"
version = "^0.2.24"
default-features = false
features = ["env-filter", "fmt", "ansi", "chrono", "tracing-log", "json"]


[build-dependencies]
anyhow = "^1.0.44"
chrono = { version = "^0.4.19" }


[profile.dev]
split-debuginfo = "unpacked"
