[package]
name = "api"
version = "0.8.3"
edition = "2021"
rust-version = "1.56.0"


[dependencies]
anyhow = "^1.0.48"
async_trait = { package = "async-trait", version = "^0.1.51" }
bson = { version = "2.1.0-beta", features = ["chrono-0_4"] }
chrono = { version = "^0.4.19", features = ["serde"] }
delegate = "^0.6.1"
derives = { package = "derive_more", version = "^0.99.16" }
derivative = "^2.2.0"
dotenv = "^0.15.0"
emails = { package = "mailchecker", version = "^4.1.0" }
entrust = { git = "https://github.com/hulloitskai/entrust", tag = "v0.2.9" }
futures = { package = "futures-core", version = "^0.3.18" }
futures_util = { package = "futures-util", version = "^0.3.18" }
graphql_axum = { package = "async-graphql-axum", version = "^3.0.7" }
headers = "^0.3.5"
http = "^0.2.5"
lazy_static = "^1.4.0"
moka = { version = "^0.6.1", features = ["future"] }
oauth2 = "^4.1.0"
phones = { package = "phonenumber", version = "^0.3.1" }
regex = "^1.5.4"
sentry_tracing = { package = "sentry-tracing", version = "^0.23.0" }
serde = { version = "^1.0.130", features = ["derive"] }
serde_json = "^1.0.71"
thiserror = "^1.0.30"
tokio = { version = "^1.14.0", features = ["rt-multi-thread", "macros"] }
tokio_stream = { package = "tokio-stream", version = "^0.1.8" }
tower = "^0.4.11"
tracing = "^0.1.29"
typed_builder = { package = "typed-builder", version = "^0.9.1" }
url = { version = "^2.2.2", features = ["serde"] }
walkdir = "^2.3.2"
yaml = { package = "yaml-rust", version = "^0.4.5" }
yaml_front_matter = { package = "frontmatter", version = "^0.4.0" }

[dependencies.axum]
version = "^0.3.4"
default-features = false
features = ["http2", "ws", "headers", "json"]

[dependencies.graphql]
package = "async-graphql"
version = "^3.0.7"
features = ["chrono", "url", "apollo_persisted_queries"]

[dependencies.mongodb]
version = "2.1.0-beta"
features = ["bson-chrono-0_4", "zstd-compression"]

[dependencies.request]
package = "reqwest"
version = "^0.11.6"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.sentry]
version = "^0.23.0"
default-features = false
features = [
  "backtrace",
  "contexts",
  "panic",
  "tracing",
  "reqwest",
  "rustls",
  "anyhow",
]

[dependencies.tower_http]
package = "tower-http"
version = "^0.1.2"
features = ["trace", "cors"]

# Must stay on version 0.2 due to Sentry integration.
[dependencies.tracing_subscriber]
package = "tracing-subscriber"
version = "^0.2.24"
features = ["env-filter", "json"]


[build-dependencies]
anyhow = "^1.0.48"
chrono = { version = "^0.4.19" }


[profile.dev]
split-debuginfo = "unpacked"
