[package]
name = "macros"
version = "0.1.0"
authors = ["Steven Xie <dev@stevenxie.me>"]
edition = "2018"


[lib]
proc-macro = true


[dependencies]
proc-macro2 = "^1.0.27"
quote = "^1.0.9"

[dependencies.syn]
version = "^1.0.72"
default-features = false
features = ["derive", "proc-macro"]


[profile.dev]
split-debuginfo = "unpacked"
